fixed scrollbars

--- a/src/app/account/account.component.scss
+++ b/src/app/account/account.component.scss
@@ -367,6 +367,7 @@ body {
     padding-top: .6vw;
     padding-bottom: .6vw;
     height: 6.8%;
+    border-bottom: solid .2vw #fff;
 }
 .follower-type i.active {
     background: rgba(255, 255, 255, .2);
