--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -180,6 +180,10 @@ body {
 .scroll-box {
     overflow: hidden;
     overflow-y: scroll;
+    -webkit-mask-image: linear-gradient(to bottom, transparent 0, black var(--top-mask-size, 0), black calc(100% - var(--bottom-mask-size, 0)), transparent 100%);
+    mask-image: linear-gradient(to bottom, transparent 0, black var(--top-mask-size, 0), black calc(100% - var(--bottom-mask-size, 0)), transparent 100%);
+    --top-mask-size: 10px;
+    --bottom-mask-size: 0px;
 }
 //scrollbar
 .scroll-box::-webkit-scrollbar {
